# Event-Inventory

./: .replit  404.html  DEPLOYMENT_RENDER.md  DEPLOYMENT_STATUS.md  GITHUB_PACKAGE_CHANGES.md  GITHUB_PAGES_DEPLOYMENT.md  PACKAGE_FIX.md  RENDER_EXACT_FIX.md  RENDER_FIX.md  RENDER_TROUBLESHOOTING.md  build-github-pages.js  index.html  pyproject.toml  render.yaml  replit.md  run_streamlit.sh  streamlit_app.py  tailwind.config.ts
.streamlit/: config.toml
aesa_squadron_inventory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assets/: index-B7ZgwGDD.js  index-CW_rAC7j.css  index-DcETOjD4.js  index-Dc_BTli5.css  index-DdS09C5G.js
attached_assets/: Pasted--Replace-your-entire-HTML-with-this-version-DOCTYPE-html-html-lang-en-head-meta--1755124855068_1755124855071.txt  Pasted--UTC-Logs-for-event-inventory-streamlit-app--1755203457714_1755203457716.txt  Pasted-Event-Inventory-Node-Free-Upgrade-your-instance-Connect-Manual-Deploy-Service-ID-srv-d2f39hbuibrs-1755199013773_1755199013775.txt  content-1755123921035.md
client/src/: index.css  main.tsx
client/src/components/: toast-demo.tsx
client/src/components/auth/: cookie-consent.tsx  password-prompt.tsx
client/src/components/inventory/: admin-panel.tsx  inventory-table.tsx  mobile-inventory-slider.tsx  pending-requests.tsx  request-form.tsx
client/src/components/survey/: survey-dialog.tsx
client/src/components/ui/: toaster.tsx
client/src/hooks/: use-auth.ts  use-toast.ts
client/src/lib/: firebase.ts
client/src/pages/: dashboard.tsx
client/src/types/: inventory.ts
