[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aesa-squadron-inventory"
version = "1.0.0"
description = "AESA Squadron 72 Inventory Management System"
dependencies = [
    "streamlit>=1.48.1",
    "pandas>=2.3.1",
    "firebase-admin>=7.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4"
]

[tool.setuptools]
py-modules = ["streamlit_app"]
